<resources>
    <string name="app_name">TrainingLog</string>
    <string name="tv_email">メールアドレス</string>
    <string name="tv_email_or_id">メールアドレスまたはID</string>
    <string name="tv_password">パスワード</string>
    <string name="bt_sign_in">ログイン</string>
    <string name="tv_jump_to_sign_in">新規登録はこちら</string>
    <string name="tv_password_confirmation">パスワード確認用</string>
    <string name="tv_name">名前</string>
    <string name="bt_sign_up">登録</string>
    <string name="training">トレーニング</string>
    <string name="routine">ルーティン</string>
    <string name="measure">計測</string>
    <string name="timer">タイマー</string>
    <string name="myPage">マイページ</string>
    <string name="sw_sharing">プロフィールを公開する</string>
    <string name="status_public">公開</string>
    <string name="status_private">非公開</string>
    <string name="tenSec">+10秒</string>
    <string name="oneMin">+1分</string>
    <string name="fiveMin">+5分</string>
    <string name="userEdit">アカウント編集</string>
    <string name="userDelete">アカウント削除</string>
    <string name="editDescription">編集する項目のみ入力してください。</string>
    <string name="delete">削除する</string>
    <string name="edit">更新する</string>
    <string name="id">ID</string>
    <string name="dialogMessage">本当に削除しますか。</string>
    <string name="cancel">キャンセル</string>
    <string name="newData">新規入力</string>
    <string name="weight">体重(kg)</string>
    <string name="date">日付</string>
    <string name="measureHistory">計測記録</string>
    <string name="record">記録する</string>
    <string name="advanced">追加項目を開く</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
