<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".TimerFragment">

    <Button
        android:id="@+id/tenSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenSec"
        app:layout_constraintBottom_toTopOf="@+id/timerText"
        app:layout_constraintEnd_toStartOf="@+id/oneMin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oneMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneMin"
        app:layout_constraintBottom_toTopOf="@+id/timerText"
        app:layout_constraintEnd_toStartOf="@+id/fiveMin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tenSec"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fiveMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fiveMin"
        app:layout_constraintBottom_toTopOf="@+id/timerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oneMin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="150sp"
        app:layout_constraintBottom_toBottomOf="@id/playStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneMin" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/play"
        android:tint="@android:color/black"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/reset"
        android:tint="@android:color/black"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playStop"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

</androidx.constraintlayout.widget.ConstraintLayout>